# ghost-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.kiro/specs/intelligent-oncall-agent/: .config.kiro  design.md  requirements.md  tasks.md
src/ghost_agent/: __init__.py  config.py
src/ghost_agent/agents/: __init__.py  conversation_agent.py  executor.py  knowledge_base_agent.py  planner.py  replanner.py
src/ghost_agent/api/: __init__.py
src/ghost_agent/clients/: __init__.py  doubao_client.py  milvus_client.py
src/ghost_agent/core/: __init__.py  chat_model.py  indexer.py  loader.py  mcp_client.py  prompt_module.py  retriever.py  tool_registry.py  transformer.py
src/ghost_agent/memory/: __init__.py  memory_module.py
src/ghost_agent/models/: __init__.py  chunk.py  errors.py  ingest_task.py  memory.py  plan.py  tool.py  troubleshooting_task.py  vector_record.py
src/ghost_agent/vector_db/: __init__.py  vector_store.py
tests/: conftest.py  test_chat_model.py  test_chunk.py  test_config.py  test_conversation_agent.py  test_doubao_client.py  test_errors.py  test_executor.py  test_indexer.py  test_ingest_task.py  test_knowledge_base_agent.py  test_loader.py  test_mcp_client.py  test_memory_models.py  test_memory_module.py  test_milvus_client.py  test_plan.py  test_planner.py  test_prompt_module.py  test_replanner.py  test_retriever.py  test_tool_models.py  test_tool_registry.py  test_transformer.py  test_troubleshooting_task.py  test_vector_record.py  test_vector_store.py
